[package]
name = "ros-z-console"
version = "0.1.0"
edition = "2024"
description = "ROS 2 Graph Inspector & Dataflow Monitor TUI"
homepage = "https://github.com/ZettaScaleLabs/ros-z"
default-run = "ros-z-console"

[dependencies]
ros-z = { path = "../ros-z", features = ["ros2dds"] }
ros-z-msgs = { path = "../ros-z-msgs" }
ros-z-protocol = { path = "../ros-z-protocol", features = ["ros2dds"] }
clap = { workspace = true }
crossterm = "0.29"
flume = { workspace = true }
parking_lot = { workspace = true }
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
zenoh = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
once_cell = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
serial_test = "3.0"

[features]
default = []
# ROS interop tests require ros2 CLI with rmw_zenoh_cpp
ros-interop = []
