[package]
name = "ros-z-derive"
version.workspace = true
edition.workspace = true
description = "Derive macros for ros-z Python bindings"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }
quote.workspace = true
proc-macro2.workspace = true
