[package]
name = "ros-z-msgs"
version.workspace = true
edition.workspace = true

[dependencies]
ros-z = { path = "../ros-z", default-features = false, features = [
  "rmw-zenoh",
] }
serde = { workspace = true }
serde_bytes = { workspace = true }
# Required by pure-Rust codegen
smart-default = { workspace = true }
serde-big-array = { workspace = true }
zenoh-buffers = { workspace = true }

prost = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
ros-z-derive = { path = "../ros-z-derive", optional = true }
ros-z-cdr = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }

[dev-dependencies]
ros-z-cdr = { workspace = true }
byteorder = { workspace = true }

[build-dependencies]
ros-z-codegen = { version = "0.1", path = "../ros-z-codegen" }
anyhow = { workspace = true }
glob = { workspace = true }

[features]
default = ["core_msgs"]

# Core messages - commonly used ROS 2 interfaces
core_msgs = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "example_interfaces",
  "action_tutorials_interfaces",
  "rcl_interfaces",
]

# Individual packages (all vendored in assets)
rcl_interfaces = []
std_msgs = []
geometry_msgs = ["std_msgs"]
sensor_msgs = ["std_msgs", "geometry_msgs"]
nav_msgs = ["std_msgs", "geometry_msgs"]
example_interfaces = []
action_tutorials_interfaces = []
test_msgs = []

# Convenience aliases
common_interfaces = ["std_msgs", "geometry_msgs", "sensor_msgs"]
robotics = ["core_msgs"]
all_msgs = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "example_interfaces",
  "action_tutorials_interfaces",
  "rcl_interfaces",
  "test_msgs",
]

bundled_msgs = ["std_msgs", "geometry_msgs", "sensor_msgs", "nav_msgs"]

protobuf = ["prost", "ros-z/protobuf", "ros-z-codegen/protobuf"]

# ROS 2 distro compatibility - propagate to ros-z
humble = ["ros-z/humble"]
jazzy = ["ros-z/jazzy"]
rolling = ["ros-z/rolling"]
kilted = ["ros-z/kilted"]
python_registry = [
  "pyo3",
  "ros-z-cdr",
  "parking_lot",
  "once_cell",
  "ros-z-derive",
  "ros-z/python",
]
