[package]
name = "ros-z-py"
version.workspace = true
edition.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
default = ["jazzy"]
jazzy = ["ros-z/jazzy"]
humble = ["ros-z/humble"]
kilted = ["ros-z/kilted"]
rolling = ["ros-z/rolling"]

[dependencies]
pyo3 = { workspace = true }
ros-z = { path = "../ros-z", default-features = false }
ros-z-cdr = { workspace = true }
ros-z-msgs = { path = "../ros-z-msgs", features = [
  "python_registry",
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "example_interfaces",
] }
zenoh = { workspace = true }
zenoh-buffers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
flume = { workspace = true }
once_cell = "1.19"

[build-dependencies]
anyhow = { workspace = true }
