[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ros-z-py"
version = "0.1.0"
description = "Python bindings for ros-z: Native Rust ROS 2 implementation using Zenoh"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["ros2", "zenoh", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dependencies = [
    "msgspec>=0.18.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
