[package]
name = "ros-z-tests"
version.workspace = true
edition.workspace = true
publish = false

# NOTE: This crate requires ros-z-msgs (which needs ROS dependencies) for integration tests.
# To build without ROS, exclude this crate from the workspace build:
#   cargo build --workspace --exclude ros-z-msgs --exclude ros-z-tests

[dependencies]
ros-z = { path = "../ros-z", default-features = false, features = ["protobuf"] }
ros-z-msgs = { path = "../ros-z-msgs", optional = true }
ros-z-cdr = { path = "../ros-z-cdr" }
protobuf_demo = { path = "../ros-z/examples/protobuf_demo" }

# Test runtime dependencies
zenoh = { workspace = true } # For per-test router sessions
zenoh-buffers = { workspace = true } # For ZBuf operations in tests
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true } # For lazy static zenohd daemon
serial_test = "3.0" # For sequential test execution
nix = { version = "0.29", features = [
  "signal",
] } # For graceful process shutdown
prost = { workspace = true } # For protobuf service tests
serde = { workspace = true } # For CDR serialization in dds_interop tests

[features]
default = []
ros-msgs = ["dep:ros-z-msgs"]
ros-interop = ["ros-msgs"]
python-interop = ["ros-msgs"]

# ros2dds backend interop (with zenoh-bridge-ros2dds)
# This enables testing ros-z with DDS-based ROS 2 nodes via zenoh-bridge-ros2dds
ros2dds-interop = ["ros-msgs", "ros-z/ros2dds", "ros-z/rmw-zenoh"]

# ROS 2 distro compatibility - propagate to ros-z and ros-z-msgs
humble = ["ros-z/humble", "ros-z-msgs/humble"]
jazzy = ["ros-z/jazzy", "ros-z-msgs/jazzy"]
rolling = ["ros-z/rolling", "ros-z-msgs/rolling"]
iron = ["ros-z/iron", "ros-z-msgs/iron"]
