[package]
name = "ros-z-tests"
version.workspace = true
edition.workspace = true
publish = false

# NOTE: This crate requires ros-z-msgs (which needs ROS dependencies) for integration tests.
# To build without ROS, exclude this crate from the workspace build:
#   cargo build --workspace --exclude ros-z-msgs --exclude ros-z-tests

[dependencies]
ros-z = { path = "../ros-z", default-features = false, features = ["protobuf"] }
ros-z-msgs = { path = "../ros-z-msgs", default-features = false, optional = true }
ros-z-dds = { path = "../ros-z-dds", optional = true }
ros-z-cdr = { path = "../ros-z-cdr" }
ros-z-schema = { path = "../ros-z-schema" }
protobuf_demo = { path = "../ros-z/examples/protobuf_demo" }

# Test runtime dependencies
zenoh = { workspace = true } # For per-test router sessions
zenoh-buffers = { workspace = true } # For ZBuf operations in tests
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true } # For lazy static zenohd daemon
serial_test = "3.0" # For sequential test execution
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
] } # For RUST_LOG in tests
nix = { version = "0.29", features = [
  "signal",
] } # For graceful process shutdown
prost = { workspace = true } # For protobuf service tests
serde = { workspace = true } # For CDR serialization in dds_interop tests

[features]
default = []
ros-msgs = [
  "dep:ros-z-msgs",
  "ros-z-msgs/std_msgs",
  "ros-z-msgs/geometry_msgs",
  "ros-z-msgs/sensor_msgs",
  "ros-z-msgs/nav_msgs",
  "ros-z-msgs/rcl_interfaces",
]
ros-interop = [
  "ros-msgs",
  "ros-z-msgs/example_interfaces",
  "ros-z-msgs/action_tutorials_interfaces",
]
python-interop = ["ros-msgs"]

# Humble ↔ Jazzy bridge integration tests (requires nix + ros-humble shell)
humble-jazzy-bridge-tests = [
  "ros-msgs",
  "ros-z-msgs/example_interfaces",
  "ros-z-msgs/action_tutorials_interfaces",
]

# ros2dds backend interop (with zenoh-bridge-ros2dds)
# This enables testing ros-z with DDS-based ROS 2 nodes via zenoh-bridge-ros2dds
ros2dds-interop = ["ros-msgs", "ros-z/ros2dds", "ros-z/rmw-zenoh"]

# Native zenoh-bridge-dds integration tests.
# Includes API-level tests that use ros-z-dds directly and typed bridge tests (std_msgs).
dds-bridge-interop = ["dep:ros-z-dds", "ros-msgs"]

# ROS 2 distro compatibility - propagate to ros-z and ros-z-msgs
humble = ["ros-z/humble", "ros-z-msgs/humble"]
jazzy = ["ros-z/jazzy", "ros-z-msgs/jazzy"]
rolling = ["ros-z/rolling", "ros-z-msgs/rolling"]
kilted = ["ros-z/kilted", "ros-z-msgs/kilted"]
