[package]
name = "protobuf_demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ros-z = { path = "../.." }
ros-z-msgs = { path = "../../../ros-z-msgs", features = ["geometry_msgs", "protobuf"] }
prost = "0.13"
zenoh = { version = "1.6.2", default-features = false }

[build-dependencies]
prost-build = "0.13"
