[package]
name = "protobuf_demo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ros-z = { workspace = true, features = ["protobuf"] }
ros-z-msgs = { path = "../../../ros-z-msgs", features = ["geometry_msgs", "protobuf"] }
prost = { workspace = true }
serde = { workspace = true }
zenoh = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
