[package]
name = "protobuf_demo"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "protobuf_demo"
path = "src/lib.rs"

[[bin]]
name = "protobuf_demo"
path = "src/demo.rs"

[dependencies]
ros-z = { workspace = true, features = ["protobuf"] }
ros-z-msgs = { path = "../../../ros-z-msgs", features = [
  "geometry_msgs",
  "protobuf",
] }
prost = { workspace = true }
serde = { workspace = true }
zenoh = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }

[build-dependencies]
prost-build = { workspace = true }
