[package]
name = "custom-msgs-demo"
version = "0.1.0"
edition = "2021"

# Standalone package, not part of parent workspace
[workspace]

[dependencies]
ros-z-msgs = { path = "../../../ros-z-msgs", default-features = true }
ros-z = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
smart-default = "0.7"
zenoh-buffers = "1"

[build-dependencies]
ros-z-codegen = { path = "../../../ros-z-codegen" }
anyhow = "1"
